force-app/main/default/objects/Session__c/fields/Authors__c.field-meta.xml
<CustomField>
    <fullName>Authors__c</fullName>
    <label>Authors</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>