force-app/main/default/objects/Session__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ageing and dementia</fullName>
            </value>
            <value>
                <fullName>Autonomic nervous system disorders</fullName>
            </value>
            <value>
                <fullName>Career development</fullName>
            </value>
            <value>
                <fullName>Cerebrovascular diseases</fullName>
            </value>
            <value>
                <fullName>Child and developmental neurology</fullName>
            </value>
            <value>
                <fullName>Clinical Neurophysiology</fullName>
            </value>
            <value>
                <fullName>Cognitive neurology/neuropsychology</fullName>
            </value>
            <value>
                <fullName>Coma and chronic disorders of consciousness</fullName>
            </value>
            <value>
                <fullName>Critical care</fullName>
            </value>
            <value>
                <fullName>Education in Neurology</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Ethics in neurology</fullName>
            </value>
            <value>
                <fullName>Gender issues</fullName>
            </value>
            <value>
                <fullName>Headache and pain</fullName>
            </value>
            <value>
                <fullName>Higher cortical functions</fullName>
            </value>
            <value>
                <fullName>Highlight</fullName>
            </value>
            <value>
                <fullName>History of neurology</fullName>
            </value>
            <value>
                <fullName>Infectious diseases</fullName>
            </value>
            <value>
                <fullName>Motor neurone diseases</fullName>
            </value>
            <value>
                <fullName>Movement disorders</fullName>
            </value>
            <value>
                <fullName>MS and related disorders</fullName>
            </value>
            <value>
                <fullName>Muscle and neuromuscular junction diseases</fullName>
            </value>
            <value>
                <fullName>Muscle disorders</fullName>
            </value>
            <value>
                <fullName>Neurocritical care</fullName>
            </value>
            <value>
                <fullName>Neuroepidemiology</fullName>
            </value>
            <value>
                <fullName>Neurogenetics</fullName>
            </value>
            <value>
                <fullName>Neuroimaging</fullName>
            </value>
            <value>
                <fullName>Neuroimmunology</fullName>
            </value>
            <value>
                <fullName>Neurological manifestation of systemic disease</fullName>
            </value>
            <value>
                <fullName>Neuro-oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>