force-app/main/default/objects/Session__c/fields/Industry_Terms__c.field-meta.xml
<CustomField>
    <fullName>Industry_Terms__c</fullName>
    <label>Industry Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>