force-app/main/default/objects/Session__c/fields/Industry_Terms_Need_to_be_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Industry_Terms_Need_to_be_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industry Terms Need to be Accepted</label>
    <type>Checkbox</type>
</CustomField>