force-app/main/default/objects/Session__c/fields/Mutual_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Exclusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mutual Exclusion</label>
    <referenceTo>Mutual_Exclusion__c</referenceTo>
    <relationshipLabel>Session</relationshipLabel>
    <relationshipName>Session</relationshipName>
    <type>Lookup</type>
</CustomField>