force-app/main/default/objects/Session__c/fields/Registrations__c.field-meta.xml
<CustomField>
    <fullName>Registrations__c</fullName>
    <label>Registrations</label>
    <summaryForeignKey>Session_Participation__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>