force-app/main/default/objects/Session__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <label>Room Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>