force-app/main/default/objects/Session__c/fields/Session_Manage_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_Manage_ID__c</fullName>
    <externalId>true</externalId>
    <label>Session Manage ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>