force-app/main/default/objects/Session__c/fields/Session_Title__c.field-meta.xml
<CustomField>
    <fullName>Session_Title__c</fullName>
    <label>Session Title</label>
    <type>TextArea</type>
</CustomField>