force-app/main/default/objects/Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Career development session</fullName>
            </value>
            <value>
                <fullName>Case-based workshop</fullName>
            </value>
            <value>
                <fullName>Controversy</fullName>
            </value>
            <value>
                <fullName>Focused Workshop</fullName>
            </value>
            <value>
                <fullName>Hands-on Course</fullName>
            </value>
            <value>
                <fullName>Interactive Session</fullName>
            </value>
            <value>
                <fullName>Plenary Sysmposium</fullName>
            </value>
            <value>
                <fullName>Special Session</fullName>
            </value>
            <value>
                <fullName>Topical Symposium</fullName>
            </value>
            <value>
                <fullName>ePoster</fullName>
            </value>
            <value>
                <fullName>Oral Presentation</fullName>
            </value>
            <value>
                <fullName>Symposia</fullName>
            </value>
            <value>
                <fullName>Teaching Course</fullName>
            </value>
            <value>
                <fullName>Scientific theatre</fullName>
            </value>
            <value>
                <fullName>ePresentation</fullName>
            </value>
            <value>
                <fullName>Forum Programmes</fullName>
            </value>
            <value>
                <fullName>Networking Session</fullName>
            </value>
            <value>
                <fullName>3-Day Satellite Session</fullName>
                <isActive>false</isActive>
                <label>3-Day Satellite Session</label>
            </value>
            <value>
                <fullName>3-Days Satellite Session</fullName>
                <isActive>false</isActive>
                <label>3-Days Satellite Session</label>
            </value>
            <value>
                <fullName>Brain Challenge</fullName>
                <isActive>false</isActive>
                <label>Brain Challenge</label>
            </value>
            <value>
                <fullName>Controversy Session</fullName>
                <isActive>false</isActive>
                <label>Controversy Session</label>
            </value>
            <value>
                <fullName>Early bird satellite session</fullName>
                <isActive>false</isActive>
                <label>Early bird satellite session</label>
            </value>
            <value>
                <fullName>Grand Round session</fullName>
                <isActive>false</isActive>
                <label>Grand Round session</label>
            </value>
            <value>
                <fullName>Hands-on-course</fullName>
                <isActive>false</isActive>
                <label>Hands-on-course</label>
            </value>
            <value>
                <fullName>Networking</fullName>
                <isActive>false</isActive>
                <label>Networking</label>
            </value>
            <value>
                <fullName>Oral Session</fullName>
                <isActive>false</isActive>
                <label>Oral Session</label>
            </value>
            <value>
                <fullName>Plenary Symposium</fullName>
                <isActive>false</isActive>
                <label>Plenary Symposium</label>
            </value>
            <value>
                <fullName>Poster Session</fullName>
                <isActive>false</isActive>
                <label>Poster Session</label>
            </value>
            <value>
                <fullName>Satellite Symposium</fullName>
                <isActive>false</isActive>
                <label>Satellite Symposium</label>
            </value>
            <value>
                <fullName>Symposium</fullName>
                <isActive>false</isActive>
                <label>Symposium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>