force-app/main/default/objects/Session__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Topics_of_interest</valueSetName>
    </valueSet>
</CustomField>