force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_custom__c</columns>
    <columns>Session_Type__c</columns>
    <columns>Room_Name__c</columns>
    <columns>Session_Start__c</columns>
    <columns>Session_End__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>